feat: Create POST /socks to add a new sock #31 (#36)
* feat: adds Sock, SockVariant, CreateSockRequest

* feat: Added SockStore interface and sock_handler

* feat: adds socks store,handler, routes,update docs

* feat: requires admin access to make POST /socks

* Fix: stop manually set createdat, use type.message

* Fix: Changed postgresSockStore to SockStore

* Fix: Added pointers to fields with omitempty

* Fix: Reverted the type.message change

* Deleted comment
